--- a/index.html
+++ b/index.html
@@ -55,6 +55,21 @@
 			</div>
 
 		</header>
+		<main class="page">
+			<section class="main-block">
+				<div class="main-block__background">
+					<img src="./images/main-block/Background.png" alt="Фоновое изображние">
+				</div>
+				<div class="main-block__container">
+					<div class="main-block__content">
+						<h1 class="main-block__title">Когнитивные технологии, <span>машинное обучение</span></h1>
+						<p class="main-block__subtitle">Системы прикладного искусственного интеллекта</p>
+						<a href="" class="main-block__button">Наши проекты</a>
+					</div>
+				</div>
+			</section>
+		</main>
+
 	</div>
 	<script type="module" src="./script/functions.js"></script>
 	<script type="module" src="./script/index.js"></script>
