--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="pages/index.css">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,7 +56,9 @@
 			</div>
 
 		</header>
+
 		<main class="page">
+
 			<section class="main-block">
 				<div class="main-block__background">
 					<img src="./images/main-block/Background.png" alt="Фоновое изображние">
@@ -68,9 +71,232 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="words-about-us">
+				<div class="words-about-us__container">
+					<div class="words-about-us__title-block">
+						<h2 class="words-about-us__title">Несколько слов о нас</h2>
+						<p class="words-about-us__subtitle">Национальный центр когнитивных разработок – центр
+							национальной
+							технологической инициативы (НТИ), получивший государственную поддержку по направлению
+							«Технологии
+							машинного обучения и когнитивные технологии».</p>
+					</div>
+					<div class="words-about-us__slider-block">
+						<div class="words-about-us__arrows">
+							<div class="words-about-us__arrow words-about-us__arrow_type-prev">
+								<img src="./images/card-news/arrow-prev.svg" alt="">
+							</div>
+							<div class="words-about-us__arrow words-about-us__arrow_type-next">
+								<img src="./images/card-news/arrow-next.svg" alt="">
+							</div>
+						</div>
+						<div class="words-about-us__slider swiper">
+							<div class="words-about-us__wrapper swiper-wrapper">
+								<div class="words-about-us__slide swiper-slide">
+									<article class="card-news">
+										<div class="card-news__container">
+											<img src="./images/card-news/Vector.svg" alt="Булавка"
+												class="card-news__image">
+											<div class="card-news__title">
+												<div class="card-news__date">Понедельник, 5 июля 2021г</div>
+												<div class="card-news__heading">ЗНАКОМСТВО С МАШИННЫМ ОБУЧЕНИЕМ:
+													СТУДЕНТЫ
+													ЕВРАЗИЙСКОГО НАЦИОНАЛЬ…</div>
+											</div>
+											<p class="card-news__text">Университет ИТМО провел научно-исследовательскую
+												стажировку для группы магистрантов из Евразийского национального
+												университета имени Л.Н. Гумилева. Ведущие преподаватели в течение десяти
+												дней рассказывали им об основах машинного обучения.</p>
+										</div>
+
+									</article>
+								</div>
+								<div class="words-about-us__slide swiper-slide">
+									<article class="card-news">
+										<div class="card-news__container">
+											<img src="./images/card-news/Vector.svg" alt="Булавка"
+												class="card-news__image">
+											<div class="card-news__title">
+												<div class="card-news__date">Понедельник, 5 июля 2021г</div>
+												<div class="card-news__heading">АВТОРЫ РОБОТА-МУЗЫКАНТА РОБЕРТА
+													РОБОТЕЦКОГО
+													ПРИЗНАНЫ ЛУЧШИМИ НОВИЧ…</div>
+											</div>
+											<p class="card-news__text">Команда ИТМО стала лучшей на международном финале
+												RoboCup-2021. Успех ребятам принес Роберт Роботецкий — робот-виртуоз,
+												исполнивший знаменитый французский романс «Под небом Парижа». В
+												подготовке
+												команды участвовали сотрудники лаборатории.</p>
+										</div>
+									</article>
+								</div>
+								<div class="words-about-us__slide swiper-slide">
+									<article class="card-news">
+										<div class="card-news__container">
+											<img src="./images/card-news/Vector.svg" alt="Булавка"
+												class="card-news__image">
+											<div class="card-news__title">
+												<div class="card-news__date">Суббота, 3 июля 2021г</div>
+												<div class="card-news__heading">ВОЗВРАЩЕНИЕ НА ПЕТРОПАВЛОВКУ: КАК ПРОШЕЛ
+													ВЫПУСКНОЙ ITMO. LIVE — 2021</div>
+											</div>
+											<p class="card-news__text">Команда ИТМО сделала многое, чтобы вернуть формат
+												выпускного этого и прошлого года. Из-за эпидемиологической ситуации
+												отменена
+												развлекательная часть, но сохранилась торжественная. Выпускники смогли
+												получить дипломы из рук деканов и услышать поздравления ректора.</p>
+										</div>
+									</article>
+								</div>
+								<div class="words-about-us__slide swiper-slide">
+									<article class="card-news">
+										<div class="card-news__container">
+											<img src="./images/card-news/Vector.svg" alt="Булавка"
+												class="card-news__image">
+											<div class="card-news__title">
+												<div class="card-news__date">Пятница, 2 июля 2021г</div>
+												<div class="card-news__heading">«LEAVING THE DIGITAL» — ИЛИ КАК
+													СОЕДИНИТЬ
+													ЦИФРОВОЕ, ТЕХНОЛОГИЧЕСКОЕ И БИОЛОГ…</div>
+											</div>
+											<p class="card-news__text">Преподаватели центра Art & Science Университета
+												ИТМО
+												провели открытый воркшоп, посвященный созданию произведений,
+												объединяющих в
+												себе биологическую и синтетическую среды. Серия занятий приурочена к
+												приемной кампании в магистратуру центра.</p>
+										</div>
+									</article>
+								</div>
+								<div class="words-about-us__slide swiper-slide">
+									<article class="card-news">
+										<div class="card-news__container">
+											<img src="./images/card-news/Vector.svg" alt="Булавка"
+												class="card-news__image">
+											<div class="card-news__title">
+												<div class="card-news__date">Пятница, 2 июля 2021г</div>
+												<div class="card-news__heading">В ИТМО ЗАПУСКАЕТСЯ ПЕРВАЯ ПРОЕТНАЯ
+													МАГИСТРАТУРА — ДЛЯ АБИТУРИЕНТОВ ФАКУЛЬТЕТА П…</div>
+											</div>
+											<p class="card-news__text">Особенность нового формата магистратуры в том,
+												что
+												студенты смогут составлять программу своего обучения, выбирать только те
+												курсы, которые им интересны, а главное — работать над технологически
+												сложным
+												проектом под руководством менторов из топовых IT-компаний.</p>
+										</div>
+									</article>
+								</div>
+								<div class="words-about-us__slide swiper-slide">
+									<article class="card-news">
+										<div class="card-news__container">
+											<img src="./images/card-news/Vector.svg" alt="Булавка"
+												class="card-news__image">
+											<div class="card-news__title">
+												<div class="card-news__date">Пятница, 2 июля 2021г</div>
+												<div class="card-news__heading">КОГДА НЕ ЗАНИМАЕШЬСЯ СВОИМ ОБРАЗОВАНИЕМ,
+													МОЖНО ПРИЙТИ К СОТСТОЯНИ…</div>
+											</div>
+											<p class="card-news__text">Владислав Танков поступил в ИТМО будучи
+												специалистом
+												в компании JetBrains. На одном из хакатонов в рамках программы с
+												JetBrains
+												он сделал плагин для проверки грамотности текстов в среде разработки
+												IntelliJ IDEA. После окончания магистратуры Владислав возглавил команду
+												разработки.</p>
+										</div>
+									</article>
+								</div>
+								<div class="words-about-us__slide swiper-slide">
+									<article class="card-news">
+										<div class="card-news__container">
+											<img src="./images/card-news/Vector.svg" alt="Булавка"
+												class="card-news__image">
+											<div class="card-news__title">
+												<div class="card-news__date">Четверг, 1 июля 2021г</div>
+												<div class="card-news__heading">СТУДЕНТЫ ИТМО И ВЫПУСКНИКИ ЛЭТИ
+													РАЗРАБОТАЛИ
+													МОДУЛЬ ДЛЯ БЫ…</div>
+											</div>
+											<p class="card-news__text">Интеллектуальный модуль для станций зарядки
+												позволяет
+												заряжать накопители в электрокарах и электросамокатах быстрее, чем при
+												питании от сети. Программное обеспечение модуля обеспечивает защиту в
+												случае
+												аварийных ситуаций и повышает эффективность всего зарядного устройства.
+											</p>
+										</div>
+									</article>
+								</div>
+								<div class="words-about-us__slide swiper-slide">
+									<article class="card-news">
+										<div class="card-news__container">
+											<img src="./images/card-news/Vector.svg" alt="Булавка"
+												class="card-news__image">
+											<div class="card-news__title">
+												<div class="card-news__date">Четверг, 1 июля 2021г</div>
+												<div class="card-news__heading">КАКИЕ СУЩЕСТВУЮТ ВАКЦИНЫ, КАК ИХ
+													ИСПЫТЫВАЮТ,
+													И ПО КАКИМ ПРИНЦЫПАМ ИХ СЛЕДУ…</div>
+											</div>
+											<p class="card-news__text">Вакцинация от коронавируса стала одной из главных
+												тем. Весь мир следит за количеством привитых. Прививочная кампания дает
+												результат — снижается смертность, количество госпитализаций. Но вокруг
+												вакцинации остается много мифов, которые вызывают у скептиков споры.</p>
+										</div>
+									</article>
+								</div>
+								<div class="words-about-us__slide swiper-slide">
+									<article class="card-news">
+										<div class="card-news__container">
+											<img src="./images/card-news/Vector.svg" alt="Булавка"
+												class="card-news__image">
+											<div class="card-news__title">
+												<div class="card-news__date">Среда, 30 июня 2021г</div>
+												<div class="card-news__heading">УНИВЕРСИТЕТ ИТМО ЗАПУСКАЕТ НОВУЮ
+													КОРПОРАТИВНУЮ СПЕЦИАЛИЗАЦИЮ В МАГИСТРА…</div>
+											</div>
+											<p class="card-news__text">Партнером нового направления станет Napoleon IT.
+												Сотрудники компании и преподаватели ИТМО будут готовить магистров,
+												которые
+												смогут работать в проектах, связанных с распознаванием лиц, технологиями
+												deepfake, созданием приложений для распознавания предметов.</p>
+										</div>
+									</article>
+								</div>
+								<div class="words-about-us__slide swiper-slide">
+									<article class="card-news">
+										<div class="card-news__container">
+											<img src="./images/card-news/Vector.svg" alt="Булавка"
+												class="card-news__image">
+											<div class="card-news__title">
+												<div class="card-news__date">Среда, 30 июня 2021г</div>
+												<div class="card-news__heading">СТУДЕНТКА И СОТРУДНИЦА ИТМО АННА
+													ВОЛОШИНА
+													ПОЛУЧИЛА БРОНЗОВОГО СФИН...</div>
+											</div>
+											<p class="card-news__text">В Петропавловской крепости состоялась
+												торжественная
+												церемония вручения наград лучшим выпускникам Санкт-Петербурга. Среди
+												тех,
+												кто получил памятную статуэтку, была выпускница факультета
+												технологического
+												менеджмента и инноваций Анна Волошина. </p>
+										</div>
+									</article>
+								</div>
+							</div>
+						</div>
+						<div class="words-about-us__pagination"></div>
+					</div>
+			</section>
+
 		</main>
 
 	</div>
+	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+	<script src="./script/slider.js"></script>
 	<script type="module" src="./script/functions.js"></script>
 	<script type="module" src="./script/index.js"></script>
 </body>
