--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="wrapper">
 		<header class="header">
-			<div class="header__container">
+			<div class="header__container _container">
 				<button type="button" class="icon-menu">
 					<span></span>
 				</button>
@@ -63,7 +63,7 @@
 				<div class="main-block__background">
 					<img src="./images/main-block/Background.png" alt="Фоновое изображние">
 				</div>
-				<div class="main-block__container">
+				<div class="main-block__container _container">
 					<div class="main-block__content">
 						<h1 class="main-block__title">Когнитивные технологии, <span>машинное обучение</span></h1>
 						<p class="main-block__subtitle">Системы прикладного искусственного интеллекта</p>
@@ -75,7 +75,7 @@
 			<section class="words-about-us">
 				<div class="words-about-us__container">
 					<div class="words-about-us__title-block">
-						<h2 class="words-about-us__title">Несколько слов о нас</h2>
+						<h2 class="title words-about-us__title">Несколько слов о нас</h2>
 						<p class="words-about-us__subtitle">Национальный центр когнитивных разработок – центр
 							национальной
 							технологической инициативы (НТИ), получивший государственную поддержку по направлению
@@ -290,6 +290,105 @@
 						</div>
 						<div class="words-about-us__pagination"></div>
 					</div>
+			</section>
+
+			<section class="industrial">
+				<div class="industrial__container _container">
+					<h2 class="title title_type_blue industrial__title">INDUSTRIAL AI RESEARCH LAB</h2>
+					<div class="industrial__content-with-photo content-with-photo">
+						<div class="content-with-photo__text-content">
+							<div class="content-with-photo__text-dark">Центр национальной технологической инициативы
+								(НТИ), получивший государственную поддержку
+								по направлению «Технологии машинного обучения
+								и когнитивные технологии».</div>
+							<div class="content-with-photo__text-light">Мы изучаем проблемы и выявляем, когда мы
+								работаем вместе с нашими клиентами, новые решения находят, не задумываясь. Работая таким
+								образом
+								и проявляя гибкость, мы можем поддерживать новый подход для удовлетворения потребностей
+								наших клиентов.</div>
+						</div>
+						<div class="content-with-photo__photo">
+							<div class="content-with-photo__column content-with-photo__column_type_left">
+								<img src="./images/industrial/2.jpg" alt="Фото1">
+							</div>
+							<div class="content-with-photo__column content-with-photo__column_type_right">
+								<img src="./images/industrial/1.jpg" alt="Фото2">
+							</div>
+						</div>
+					</div>
+					<div class="industrial__cards">
+						<div class="industrial__card card-industrial">
+							<div class="card-industrial__container">
+								<div class="card-industrial__background">
+									<img src="./images/industrial/card-industrial/bg1.jpg" alt="Фон">
+								</div>
+								<div class="card-industrial__content">
+									<h3 class="card-industrial__title">Анализ социальных данных</h3>
+									<div class="card-industrial__image">
+										<img src="./images/industrial/card-industrial/1.svg" alt="Иконка1">
+									</div>
+									<p class="card-industrial__text">Направление включает в себя исследования и
+										разработки
+										технологий МО и КТ</p>
+								</div>
+								<a href="" class="card-industrial__link">Подробнее</a>
+							</div>
+						</div>
+						<div class="industrial__card card-industrial">
+							<div class="card-industrial__container">
+								<div class="card-industrial__background">
+									<img src="./images/industrial/card-industrial/bg2.jpg" alt="Фон">
+								</div>
+								<div class="card-industrial__content">
+									<h3 class="card-industrial__title">Инфраструктура больших данных</h3>
+									<div class="card-industrial__image">
+										<img src="./images/industrial/card-industrial/2.svg" alt="Иконка1">
+									</div>
+									<p class="card-industrial__text">Направление включает в себя исследования и
+										разработки
+										технологий МО и КТ</p>
+								</div>
+								<a href="" class="card-industrial__link">Подробнее</a>
+							</div>
+						</div>
+						<div class="industrial__card card-industrial">
+							<div class="card-industrial__container">
+								<div class="card-industrial__background">
+									<img src="./images/industrial/card-industrial/bg3.jpg" alt="Фон">
+								</div>
+								<div class="card-industrial__content">
+									<h3 class="card-industrial__title">Облачные
+										вычисления</h3>
+									<div class="card-industrial__image">
+										<img src="./images/industrial/card-industrial/3.svg" alt="Иконка1">
+									</div>
+									<p class="card-industrial__text">Направление включает в себя исследования и
+										разработки
+										технологий МО и КТ</p>
+								</div>
+								<a href="" class="card-industrial__link">Подробнее</a>
+							</div>
+						</div>
+						<div class="industrial__card card-industrial">
+							<div class="card-industrial__container">
+								<div class="card-industrial__background">
+									<img src="./images/industrial/card-industrial/bg4.jpg" alt="Фон">
+								</div>
+								<div class="card-industrial__content">
+									<h3 class="card-industrial__title">QA
+										системы</h3>
+									<div class="card-industrial__image">
+										<img src="./images/industrial/card-industrial/4.svg" alt="Иконка1">
+									</div>
+									<p class="card-industrial__text">Направление включает в себя исследования и
+										разработки
+										технологий МО и КТ</p>
+								</div>
+								<a href="" class="card-industrial__link">Подробнее</a>
+							</div>
+						</div>
+					</div>
+				</div>
 			</section>
 
 		</main>
