fix: header z-indez and molecul

--- a/index.html
+++ b/index.html
@@ -301,11 +301,15 @@
 								(НТИ), получивший государственную поддержку
 								по направлению «Технологии машинного обучения
 								и когнитивные технологии».</div>
-							<div class="content-with-photo__text-light">Мы изучаем проблемы и выявляем, когда мы
+							<div class="content-with-photo__text-light">
+								<img src="./images/industrial/moleculer.svg" alt="Молекула"
+									class="content-with-photo__molecul">
+								Мы изучаем проблемы и выявляем, когда мы
 								работаем вместе с нашими клиентами, новые решения находят, не задумываясь. Работая таким
 								образом
 								и проявляя гибкость, мы можем поддерживать новый подход для удовлетворения потребностей
-								наших клиентов.</div>
+								наших клиентов.
+							</div>
 						</div>
 						<div class="content-with-photo__photo">
 							<div class="content-with-photo__column content-with-photo__column_type_left">
