--- a/index.html
+++ b/index.html
@@ -396,8 +396,45 @@
 			</section>
 
 		</main>
+		<div class="popup popup-industrial">
+			<div class="popup-industrial__content">
+				<div class="popup__close">
+					<img src="./images/popup/close.svg" alt="Крестик">
+				</div>
+				<h2 class="popup-industrial__title-opacity">Анализ социальных данных</h2>
+				<div class="popup-industrial__image">
+					<img src="./images/popup/1.jpg" alt="Картинка">
+				</div>
+				<div class="popup-industrial__text">
+					<h2 class="popup-industrial__title">Анализ социальных данных</h2>
+					<p class="popup-industrial__description">Учебные лаборатории оснащены современным компьютерным
+						оборудованием, техническими средствами защиты информации, программными и программно-аппаратными
+						комплексами средств защиты, разработанными ведущими производителями: Positive Technologies,
+						Infotecs, SearchInform, «Лаборатория ППШ» и других вендоров. Некоторые из лабораторных установок
+						являются уникальными по своим исследовательским задачам.</p>
+					<p class="popup-industrial__description">Начиная с первого курса бакалавриата, студенты погружаются
+						в область их будущей профессиональной деятельности, активно развивают навыки программирования,
+						исследования защищенности информации в независимости от формы ее представления, проектирования
+						комплексных интегрированных систем защиты информации, проходят различные виды практик.</p>
+					<p class="popup-industrial__description">В состав факультета входит ряд научных лабораторий и
+						центров, в которых проводятся исследования:</p>
+					<ul class="popup-industrial__list">
+						<li class="popup-industrial__item">безопасные киберфизические системы;</li>
+						<li class="popup-industrial__item">разработка средств защиты информации;</li>
+						<li class="popup-industrial__item">функциональная безопасность беспилотных транспортных средств;
+						</li>
+						<li class="popup-industrial__item">теория информации и кодирования;</li>
+						<li class="popup-industrial__item">информационные процессы в Интернет и безопасность
+							виртуального пространства;</li>
+						<li class="popup-industrial__item">интеллектуальные защищенные системы мультиагентного
+							взаимодействия и пр.</li>
+					</ul>
 
+				</div>
+			</div>
+		</div>
 	</div>
+	<script src="./script/popup.js"></script>
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 	<script src="./script/slider.js"></script>
 	<script type="module" src="./script/functions.js"></script>
