--- a/index.html
+++ b/index.html
@@ -397,6 +397,7 @@
 
 			<section class="our-projects">
 				<div class="our-projects__container _container">
+					<div>1</div>
 					<h2 class="title our-projects__title">НАШИ ПРОЕКТЫ</h2>
 					<div class="our-projects__projects-block projects-block">
 						<div class="projects-block__navigation">
